2011-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug that could result in slightly wrong cost function.

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* Merge from trunk
	* support/regression/tests/bug3166208.c: sync with trunk

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c, src/z80/ralloc2.cc:
	  changed with the Philipp's version from his private
	  sdcc-or-2011-4-8 branch; fixed MSVC 2010 compilation
	* src/SDCCicode.c: dbuf_detach() replaced with dbuf_destroy()
	* support/regression/ports/ucz80/spec.mk:
	  added --optralloc-exact-cost to SDCCFLAGS

2011-04-09 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/cmdpars.y: removed warnings

2011-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Fixed bug that allowed old register allocator to use IY even when the new one does, too,
	  which led to conflicts in the assignment.

2011-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCpeeph.c,
	  src/z80/main.c,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Added new peephole function notUsedFrom() to check for variable uses starting from label,
	  added it as condition in peepholes where appropriate, modified notUsed()
	  peephole function to not rely on first argument being constant or %1.

2011-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed SIGSEGV crash due to incorrect register pair cache spilling.

2011-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mcs51/Makefile.in,
	* device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpopr0.asm: renamed
	* device/lib/mcs51/crtxpop.asm,
	* device/lib/mcs51/crtxpush.asm,
	* device/lib/mcs51/crtxpushr0.asm,
	* src/mcs51/gen.c (xstackRegisters, saveRegisters, unsaveRegisters,
	  genSend): fixed for new register order

2011-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Give warning instead of crashing when failing to parse ex line node.
